// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddRowButton should match snapshot 1`] = `
<div
  className="add-button"
>
  <Button
    onClick={[MockFunction]}
    type="submit"
    variant="info"
  >
    Add new
  </Button>
</div>
`;

exports[`Spreadsheet should match snapshot with default props 1`] = `
<div
  className="spreadsheet"
>
  <div
    className="wrap-top"
  >
    <div
      className="description"
    />
    <div
      className="button-group"
    >
      <UploadButton
        onChangeInput={[Function]}
      />
      <DownloadButton
        data={
          Array [
            Array [],
          ]
        }
      />
    </div>
  </div>
  <MyReactDataSheet
    cellRenderer={[Function]}
    data={
      Array [
        Array [],
      ]
    }
    dataEditor={[Function]}
    onCellsChanged={[Function]}
    onContextMenu={[Function]}
    onSelect={[Function]}
    overflow="wrap"
    rowRenderer={[Function]}
    selected={null}
    sheetRenderer={[Function]}
    valueRenderer={[Function]}
    valueViewer={[Function]}
  />
  <div
    className="wrap-bottom"
  >
    <AddRowButton
      addNewRow={[Function]}
    />
  </div>
  <ContextMenu
    contextMenuProp={
      Object {
        "left": 0,
        "top": 0,
        "visible": false,
      }
    }
    data={
      Array [
        Array [],
      ]
    }
    onCellsChanged={[Function]}
    selected={null}
    setContextMenuProp={[Function]}
  />
  <ModalUpload
    setUploadData={[Function]}
    uploadData={
      Object {
        "exceedMaxRow": false,
        "header": Array [],
        "invalidIndies": Array [],
        "isModalOpen": false,
        "shouldProcess": false,
        "totalRow": 0,
        "validatedData": Array [
          Array [],
        ],
      }
    }
  />
</div>
`;

exports[`Spreadsheet should match snapshot with full props 1`] = `
<div
  className="spreadsheet"
>
  <div
    className="wrap-top"
  >
    <div
      className="description"
    >
      des
    </div>
    <div
      className="button-group"
    />
  </div>
  <MyReactDataSheet
    cellRenderer={[Function]}
    data={
      Array [
        Array [],
      ]
    }
    dataEditor={[Function]}
    onCellsChanged={[Function]}
    onContextMenu={[Function]}
    onSelect={[Function]}
    overflow="wrap"
    rowRenderer={[Function]}
    selected={null}
    sheetRenderer={[Function]}
    valueRenderer={[Function]}
    valueViewer={[Function]}
  />
  <div
    className="wrap-bottom"
  />
  <ContextMenu
    contextMenuProp={
      Object {
        "left": 0,
        "top": 0,
        "visible": false,
      }
    }
    data={
      Array [
        Array [],
      ]
    }
    onCellsChanged={[Function]}
    selected={null}
    setContextMenuProp={[Function]}
  />
  <ModalUpload
    setUploadData={[Function]}
    uploadData={
      Object {
        "exceedMaxRow": false,
        "header": Array [],
        "invalidIndies": Array [],
        "isModalOpen": false,
        "shouldProcess": false,
        "totalRow": 0,
        "validatedData": Array [
          Array [],
        ],
      }
    }
  />
</div>
`;

exports[`UploadButton should match snapshot 1`] = `
<div
  className="upload-button"
>
  <Button
    onClick={[Function]}
    type="submit"
    variant="info"
  >
    Upload file
  </Button>
  <input
    accept=".csv"
    hidden={true}
    name="file-upload"
    onChange={[MockFunction]}
    type="file"
  />
</div>
`;

exports[`getErrorsFromData should match snapshot 1`] = `
<div>
  <p
    className="has-text-danger"
  >
    Field 
    <b />
     row 
    <b>
      0
    </b>
     has the following problem: 
    error
  </p>
</div>
`;

exports[`renderErrorElements should match snapshot 1`] = `
<div>
  <div
    className="has-text-danger pt-4"
  >
    <H6
      className="has-text-danger mb-1"
    >
      The following validation errors have occurred:
    </H6>
    <p
      className="has-text-danger"
    >
      Field 
      <b />
       row 
      <b>
        0
      </b>
       has the following problem: 
      error
    </p>
  </div>
</div>
`;
